--- a/teaspoonProject/WebContent/resources/css/common/menubar.css
+++ b/teaspoonProject/WebContent/resources/css/common/menubar.css
@@ -32,7 +32,7 @@
     height:100%;
 }
 #header_3>img:hover{cursor: pointer }
-#header_mypage{position: relative; width:230px; display:none;}
+#header_mypage{position: relative; width:230px; }
 #header_mypage>img:hover{display:block;}
 #header_mypage>ul{position: absolute; top: 115px; width:230px; background: #fff; box-shadow: 0px 10px 10px 10px rgba(144, 144, 144, 0.1)}
 #header_mypage>ul>li{display:block; font-size:20px; list-style-type: none; height:45px; border-bottom: 1px solid rgb(212, 212, 212); padding-top:15px}
