--- a/teaspoonProject/WebContent/resources/css/common/reset.css
+++ b/teaspoonProject/WebContent/resources/css/common/reset.css
@@ -16,7 +16,7 @@ body, input, textarea, select, button, table {
      box-shadow: 0px 10px 10px 0px rgba(144, 144, 144, 0.1);
         }
 #header_wrap{ height:inherit; width:1200px; margin:0 auto; left: 0; right: 0; }
-
+.contaniner {width: 1200px; margin: 0 auto; height:100%; }
 #content {width:100%;height:1500px; margin:0 auto; display: inline-block;}
 #footer {width: 100%; height: 220px; }
 .nohover:hover{color:#222}
