controller/views수정_하정
controller>model>dao,service,vo 파일 생성
sql>쿼리문쓰다말았음
views>title수정,반복문작성
menubar>스토어쪽 경로지정

--- a/teaspoonProject/WebContent/resources/css/store/itemListView.css
+++ b/teaspoonProject/WebContent/resources/css/store/itemListView.css
@@ -1,13 +1,13 @@
 #productArea {height:inherit; margin: 0 100px;}
-#productList>div {background-color: black; margin-top:50px; width:300px; height:250px; float:left}
+#productList>div {/*background-color: black;*/ margin-top:50px; width:300px; height:250px; float:left}
 .p1 {margin-left:50px; margin-right:50px;}
 .fr {float:right}
 
 /*상품개별*/
 .product {position:relative; box-sizing: border-box;}
-.product_img{width:100%; height: 100%; position: absolute; }
+.product_img{width:300px; height: 250px; position: absolute; }
 .product .product_detail{
-    background-color:black; 
+    background:rgb(101, 100, 96);
     font-size:15px; 
     top:70%; 
     text-align: left;
@@ -18,7 +18,7 @@
     position: absolute;
     opacity:0;
 }
-.product:hover .product_detail {opacity:1;}
+.product:hover .product_detail{opacity:1;}
 .product .like_icon {width:50px; height:50px; cursor: pointer;}
 .product .like {top:72%; left:180px; position: absolute; opacity:0; z-index:1;}
 .product:hover .like {opacity:1;}
