--- a/teaspoonProject/WebContent/resources/css/common/footer.css
+++ b/teaspoonProject/WebContent/resources/css/common/footer.css
@@ -1,12 +1,12 @@
 /* notice */
 #content7{width: 100%; height: 50px; background: lightgrey;}
-#notice{ text-align: left; width: 1200px;}
+#notice{ text-align: left; width: 1200px;margin:auto;}
 #notice td{padding-top: 10px; padding-left: 15px;}
 #notice td .rg{padding-left:80px}
 #notice table a:hover{color:#222}
 
  /* footer css */
-#foot{width:1200px; float:left;}
+#foot{width:1200px;  margin:auto;height:220px;}
 #foot .ft_logo{float: left; width:230px; padding: 85px 0px; margin:0;}
 #foot .ft_content{width: 750px; float: left; font-size: 15px; text-align: left; margin-top:35px; padding-left: 15px;}
 #foot .ft_content>p{margin-top:15px}
