--- a/teaspoonProject/WebContent/resources/css/mypage/login_css.css
+++ b/teaspoonProject/WebContent/resources/css/mypage/login_css.css
@@ -25,7 +25,7 @@
 .login li input::-webkit-input-placeholder{font-size:16px; color:#9fa19f;text-indent:16px;}
 .login button{color:white;width:400px; height:56px; border:none;border:1px solid #bebebe;
                 background: rgb(157, 157, 157);font-size: 20px;}
-ul>li{list-style:none; margin:auto;}
+.login>fieldset>ul>li{list-style:none; margin:auto;}
 .tab>ul>li{font-size:30px;display:table-cell; width:205px;height:56px;}
 .tab>ul {padding:40px 0 33px;}
 .login  a { font-size: 14px; color:#666;text-decoration:none;}
