--- a/teaspoonProject/WebContent/resources/css/mypage/mypage_orderBoard.css
+++ b/teaspoonProject/WebContent/resources/css/mypage/mypage_orderBoard.css
@@ -7,7 +7,7 @@
    #content {  line-height: inherit; }
    #footer {height: 220px; line-height: 220px; background: #d6ebfd;}
    .contaniner {width: 1200px; margin: 0 auto; height: inherit; background: white;}
-   #mypage{width:1000px; height:2000px; background-color:white; margin: 0 auto;}
+   #mypage{width:1000px; height:auto; background-color:white; margin: 0 auto;}
    #mypage_menu_tab>div{
        float:left; text-align: center; line-height: 60px; 
        margin-top:80px; margin-bottom:50px; height:60px; 
