--- a/teaspoonProject/WebContent/resources/css/common/reset.css
+++ b/teaspoonProject/WebContent/resources/css/common/reset.css
@@ -17,7 +17,7 @@ body, input, textarea, select, button, table {
         }
 #header_wrap{ height:inherit; width:1200px; margin:0 auto; left: 0; right: 0; }
 .contaniner {width: 1200px; margin: 0 auto; height:100%; }
-#content {width:100%;height:1500px; margin:0 auto; display: inline-block;}
+#content {width:100%;height:100%; margin:0 auto; display: inline-block;}
 #footer {width: 100%; height: 220px; }
 .nohover:hover{color:#222}
 
