resources_css_mypage 현철 수정
footer 침범하는 애들 수정했습니다

--- a/teaspoonProject/WebContent/resources/css/mypage/mypage_delivery.css
+++ b/teaspoonProject/WebContent/resources/css/mypage/mypage_delivery.css
@@ -148,7 +148,7 @@
   #mypage_table th{border-bottom:2px solid #bebebe;  border-top: 1px solid #bebebe; padding: 10px 0;}
   #mypage_table td{border-bottom:1px solid #bebebe; padding: 30px  0;}
   /*페이징 바*/
-  .fagingarea{width:1000px;}
+  .fagingarea{width:1000px;height:155px}
   .fagingvar{width: 1000px;height:35px;}
      
 
