--- a/teaspoonProject/WebContent/resources/css/mypage/login_css.css
+++ b/teaspoonProject/WebContent/resources/css/mypage/login_css.css
@@ -5,7 +5,7 @@
 #wrap {text-align: center; font-size: 30px; color: #fff;}
 #header {height: 140px; line-height: 140px; background: #ffe1e4;}
 #content {  line-height: inherit; }
-#footer {height: 220px; line-height: 220px; background: #d6ebfd;}
+#footer {height: 220px;  background: #d6ebfd;}
 .contaniner {width: 1200px; margin: 0 auto; height: inherit; }
 #content1{width:100%; height:800px;background: #ffffff; }
 
