--- a/teaspoonProject/WebContent/resources/css/mypage/mypage_main.css
+++ b/teaspoonProject/WebContent/resources/css/mypage/mypage_main.css
@@ -1,7 +1,7 @@
  
 
    /*마이페이지*/
-   #mypage{width:1000px; height:auto; background-color:white; margin: 0 auto;}
+   #mypage{width:1000px; height:auto; background:white; margin: 0 auto;}
    #mypage_menu_tab>div{
        float:left; text-align: center; line-height: 60px; 
        margin-top:80px; margin-bottom:50px; height:60px; 
