--- a/teaspoonProject/WebContent/resources/css/mypage/mypage_reserv.css
+++ b/teaspoonProject/WebContent/resources/css/mypage/mypage_reserv.css
@@ -1,7 +1,7 @@
    /*리셋*/
    * {margin: 0; padding: 0;}
    /*전체레이아웃*/
-   #wrap {text-align: center; font-size: 30px; color: black;}
+   #wrap {text-align: center;color: black;}
    #header {height: 140px; line-height: 140px; background: #ffe1e4;}
    #banner {height: 170px; line-height: 170px; background-image:url("패턴 - 복사본.jpg")}
    #content {  line-height: inherit; }
