resources_css_mypage_mypageorder 현철 수정

--- a/teaspoonProject/WebContent/resources/css/mypage/mypage_orderBoard.css
+++ b/teaspoonProject/WebContent/resources/css/mypage/mypage_orderBoard.css
@@ -99,7 +99,7 @@
     
  
    /* 최근 주문 내역 */
-   .rd-outer{background-color: white;width:1000px;height:100%;}
+   .rd-outer{background-color: white;width:1000px;height:100%;margin-bottom:50px;}
    .rd-1{height:60px;width: 1000px;}
    .rd-2{height:60px;width: 900px;display: inline-block;}
    .rd-3{width:66px;display: inline-block;}
