--- a/teaspoonProject/WebContent/resources/css/mypage/mypage_modify.css
+++ b/teaspoonProject/WebContent/resources/css/mypage/mypage_modify.css
@@ -29,7 +29,7 @@ body, input, textarea, select, button, table {
 
 
 table {
-  border: 0.3px solid black; 
+  border: 0.3px solid lightgray; 
   height:270px; 
   width:1000px; 
   margin:0 auto;
