--- a/teaspoonProject/WebContent/resources/css/mypage/mypage_myqna.css
+++ b/teaspoonProject/WebContent/resources/css/mypage/mypage_myqna.css
@@ -86,8 +86,8 @@
         #delete>button{width: 90px;height: 35px;background: white;border-radius: 5px;border:none;border:1px solid rgb(157,157,157);}
 
         /*페이징 바*/
-        .fagingarea{width:1000px;height: 155px;}
-        .fagingvar{width: 1000px;height:35px;line-height: 18;}
+        .pagingarea{width:1000px;height: 155px;}
+        .pagingvar{width: 1000px;height:35px;}
      
         
         
