mypage_modify.css 수정_한경
table 변경한 이름값으로 수정

--- a/teaspoonProject/WebContent/resources/css/mypage/mypage_modify.css
+++ b/teaspoonProject/WebContent/resources/css/mypage/mypage_modify.css
@@ -28,7 +28,7 @@ body, input, textarea, select, button, table {
 }
 
 
-table {
+#table1 {
   border: 0.3px solid lightgray; 
   height:270px; 
   width:1000px; 
