--- a/teaspoonProject/WebContent/resources/css/admin/admin_common.css
+++ b/teaspoonProject/WebContent/resources/css/admin/admin_common.css
@@ -23,7 +23,7 @@ div{
 
  box-sizing: border-box;
 }
-#wrap {width: 1202px; height: 700px; margin: 0 auto; text-align: center; text-transform: uppercase; margin-bottom: 100px;}
+#wrap {width: 1202px; height: 700px; margin: 0 auto; text-align: center; text-transform: lowercase; margin-bottom: 100px;}
 #header {width: 100%; height: 100px; background-color:  #61646b;}
 #side {float: left; width: 240px; height: 600px;}
 #contents {float: left; width: 960px; height: 600px;}
