--- a/teaspoonProject/WebContent/resources/css/mypage/mypage_idSearch.css
+++ b/teaspoonProject/WebContent/resources/css/mypage/mypage_idSearch.css
@@ -1,12 +1,13 @@
-table {
+#table1 {
    border: 0.3px solid lightgray; 
-   height:270px; 
+   /*height:270px;*/ 
    width:1000px; 
    padding-left: 130px;
    padding-right: 100px;
    padding-top: 70px;
    padding-bottom: 65px; 
    margin:0 auto;
+   font-size:20px;
 
 }
 
@@ -42,18 +43,8 @@ table {
 
 
 
-thead>tr>th{
-    width:300px;
-    height:93px;
-}
-
-tbody{
-    margin:0 auto;
-    font-size:20px;
-
-}
 /* 폰트 초기화*/
-body, input, textarea, select, button, table {
+body, input, textarea, select, button, table1 {
     font-family: 'Nanum Gothic',  'Noto Sans KR', 'Malgun Gothic','맑은 고딕', 'dotum','돋움',sans-serif; 
     color: #222; font-size: 18px; line-height: 1.5;} 
    
@@ -68,6 +59,7 @@ body, input, textarea, select, button, table {
 
 }
 
+/*
 ul.im1 {
     list-style-type:disc; 
     list-style-image: url( "images/marker.png" );
@@ -76,7 +68,7 @@ ul.im1 {
 ul.im2 {
     list-style-image: url( "images/marker.png" );
     font-size: 20px;
-  }
+  }*/
 
 li {
     text-align: left;
