--- a/teaspoonProject/WebContent/resources/css/mypage/login_css.css
+++ b/teaspoonProject/WebContent/resources/css/mypage/login_css.css
@@ -1,24 +1,16 @@
- /*리셋*/
- * {margin: 0; padding: 0;}
 
- /*전체레이아웃*/
-#wrap {text-align: center; font-size: 30px; color: #fff;}
-#header {height: 140px; line-height: 140px; background: #ffe1e4;}
-#content {  line-height: inherit; }
-#footer {height: 220px;  background: #d6ebfd;}
-.contaniner {width: 1200px; margin: 0 auto; height: inherit; }
-#content1{width:100%; height:800px;background: #ffffff; }
+#content1{width:100%; height:750px;}
 
 /*현철오빠 css*/
 .outer{
     width:600px;
     position:absolute; 
-    left:50%; top:50%;
+    left:50%; top:40%;
     transform:translate(-50%,-50%);
   
 }
 
-.login-title{ width: 300px;height: 200px;padding-top: 50px;margin: auto;}
+.login-title{ width: 250px; height:100px; margin:0 auto; padding-bottom:30px;}
 .login li{padding:0 0 12px; }
 .login li input{border:none;border:1px solid #bebebe;
     width:400px;height:46px; box-sizing:border-box;}
@@ -30,3 +22,6 @@
 .tab>ul {padding:40px 0 33px;}
 .login  a { font-size: 14px; color:#666;text-decoration:none;}
 fieldset{border:none;margin: auto;}
+.enroll{float:left;}
+.enroll span{float:left;}
+.enroll a{float:left;}
