--- a/teaspoonProject/WebContent/resources/css/space/space_maps.css
+++ b/teaspoonProject/WebContent/resources/css/space/space_maps.css
@@ -20,9 +20,11 @@
     right:300px;
     top:25px;
     font-size:20px;
+    font-weight:bold;
 }
 #font2{
     position:relative;
     left:230px;
     font-size:20px;
+    font-weight:bold;
 }
