views_store_css수정_하정

--- a/teaspoonProject/WebContent/resources/css/store/storeBestListView.css
+++ b/teaspoonProject/WebContent/resources/css/store/storeBestListView.css
@@ -51,11 +51,7 @@ a{text-decoration: none; color: black;}
      font-size:15px; 
      top:70%; 
      text-align: left;
-     padding-top:10px;
-     padding-left: 10px;
-     padding-right: 170px;
-     padding-bottom: 10px;
-     position: absolute;
+     width:inherit; height:60px;
      opacity:0;
  }
  .product:hover .product_detail {opacity:1;}
