--- a/teaspoonProject/WebContent/resources/css/store/coffeeListView.css
+++ b/teaspoonProject/WebContent/resources/css/store/coffeeListView.css
@@ -11,14 +11,10 @@
     font-size:15px; 
     top:70%; 
     text-align: left;
-    padding-top:10px;
-    padding-left: 10px;
-    padding-right: 170px;
-    padding-bottom: 10px;
     position: absolute;
     opacity:0;
 }
-.product:hover .product_detail {opacity:1;}
+.product:hover .product_detail *{opacity:1;}
 .product .like_icon {width:50px; height:50px; cursor: pointer;}
 .product .like {top:72%; left:180px; position: absolute; opacity:0; z-index:1;}
 .product:hover .like {opacity:1;}
