--- a/teaspoonProject/WebContent/resources/css/store/itemListView.css
+++ b/teaspoonProject/WebContent/resources/css/store/itemListView.css
@@ -11,10 +11,7 @@
     font-size:15px; 
     top:70%; 
     text-align: left;
-    padding-top:10px;
-    padding-left: 10px;
-    padding-right: 170px;
-    padding-bottom: 10px;
+    width:inherit; height:60px;
     position: absolute;
     opacity:0;
 }
