--- a/teaspoonProject/WebContent/resources/css/store/storeBestListView.css
+++ b/teaspoonProject/WebContent/resources/css/store/storeBestListView.css
@@ -1,7 +1,6 @@
 /*전체레이아웃*/
 a{text-decoration: none; color: black;}
 #wrap {text-align: center; font-size: 30px; color: #000000;}
-#content {line-height: inherit; background: #ead5ee;}
 .contaniner {width: 1200px; margin: 0 auto; height: inherit;}
 .contaniner  #head_title{ color: black; font-size: 45px; font-weight: bold;}
 .p1 {margin-left:50px; margin-right:50px;}
@@ -16,12 +15,12 @@ a{text-decoration: none; color: black;}
  .product_top .product_img{width: 520px; height: 450px; position: absolute;}
  .product_top .product_detail{
      width: 340px;
-     height: 70px;
-     background-color:black; 
-     font-size:25px; 
+     height: 60px;
+     background:rgb(101, 100, 96); 
+     font-size:23px; 
      top:70%; 
      text-align: left;
-     padding-top:15px;
+     padding-top:30px;
      padding-left: 10px;
      padding-right: 170px;
      padding-bottom: 15px;
@@ -36,10 +35,10 @@ a{text-decoration: none; color: black;}
  .product_top:hover .basket {opacity: 1;}
  .product_top:hover .like {opacity:1;}
 
- .top_list {width: 400px; height: 450px; float: left; margin-top: 160px; margin-left: 50px; }
- .top_list table{ margin-left: 50px; color: black; padding-top: 45px;}
+ .top_list {width: 400px; height: 450px; float: left; margin-top: 160px; margin-left: 40px; }
+ .top_list table{ margin-left: 50px; color: black; padding-top: 50px;}
  .top_list table>caption{font-size: 30px;}
- .top_list table td, .top_list table tr{font-size: 25px;}
+ .top_list table td, .top_list table tr{font-size: 23px;}
  .top_list a {color: black; padding-left: 50px;}
  .top_list td{text-align: left;}
  
@@ -47,11 +46,12 @@ a{text-decoration: none; color: black;}
  .product {position:relative; box-sizing: border-box;}
  #productList .product_img{width:100%; height: 100%; position: absolute; }
  .product .product_detail{
-     background-color:black; 
-     font-size:15px; 
-     top:70%; 
-     text-align: left;
-     opacity:0;
+     background:rgb(101, 100, 96); 
+    font-size:15px; 
+    top:70%; 
+    text-align: left;
+    position: absolute;
+    opacity:0;
  }
  .product:hover .product_detail {opacity:1;}
  .product .like_icon {width:50px; height:50px; cursor: pointer;}
