--- a/teaspoonProject/WebContent/resources/css/store/coffeeListView.css
+++ b/teaspoonProject/WebContent/resources/css/store/coffeeListView.css
@@ -4,7 +4,7 @@
 .fr {float:right}
 
 /*상품개별*/
-.product {position:relative; box-sizing: border-box;}
+.product {position:relative; box-sizing: border-box; cursor: pointer;}
 .product_img{width:300px; height:250px; position: absolute; }
 .product .product_detail{
     background:rgb(101, 100, 96); 
@@ -14,7 +14,8 @@
     position: absolute;
     opacity:0;
 }
-.product:hover .product_detail{opacity:1;}
+.product:hover .product_detail{opacity:1; } 
+.product:hover .product_detail>p{color:white;}
 .product .like_icon {width:50px; height:50px; cursor: pointer;}
 .product .like {top:72%; left:180px; position: absolute; opacity:0; z-index:1;}
 .product:hover .like {opacity:1;}
