--- a/teaspoonProject/WebContent/resources/css/store/itemDetailView.css
+++ b/teaspoonProject/WebContent/resources/css/store/itemDetailView.css
@@ -1,8 +1,5 @@
 /*전체레이아웃*/
-a{text-decoration: none; color: black;}
 #wrap {text-align: center; font-size: 30px; color: #000000;}
-#content {line-height: inherit; background: #ead5ee;}
-.contaniner {width: 1200px; margin: 0 auto; height: inherit;}
 .contaniner  #head_title{ color: black; font-size: 45px; font-weight: bold;}
 #productArea {height:inherit; margin: 0 100px;}
 .p1 {margin-left:50px; margin-right:50px;}
@@ -42,7 +39,7 @@ a{text-decoration: none; color: black;}
 .pList4{float:left; width: 860px; height:400px; padding-left: 70px;padding-right: 70px;}
 
 /* 고객리뷰페이지(상단과 엥커걸림) */
-.pList5{ float:left; width: 1000px; height:300px; }
+.pList5{ float:left; width: 1000px; }
 .pList5 p{font-size: 32px; font-weight: bold;}
 .pList5_1{ width: 100%; height: 150px;}
 .pList5_1 button{border: 1px solid lightgray; background-color: white; font-size: 18px; width: 200px; height: 50px; margin-top: 30px; border-radius: 5px;}
@@ -61,10 +58,11 @@ a{text-decoration: none; color: black;}
 .pList5_3 button:hover{border-color:#ac8b5a; background-color: #d6ae71; color: white;}
 
 /*리뷰 입력 폼 스타일*/
-#reviewForm {width: 1000px; height: 300px; border-collapse: collapse;}
+#reviewForm {width: 1000px; height:100%; border-collapse: collapse;}
 #reviewForm td{
-    border-top: 1px solid #ddd; 
+    
     border-bottom: 1px solid #ddd; padding: 5px;
+    vertical-align:middle;
 }
 .imgBtn{background-color: white; border: 0px; cursor: pointer; width: 100px; height: 50px; margin-left: 5px;}
 
