--- a/teaspoonProject/WebContent/resources/css/store/coffeeDetailView.css
+++ b/teaspoonProject/WebContent/resources/css/store/coffeeDetailView.css
@@ -51,8 +51,8 @@
 .pList5_1 button{border: 1px solid lightgray; background-color: white; font-size: 18px; width: 200px; height: 50px; margin-top: 30px; border-radius: 5px;}
 .pList5_1 button:hover{border-color:#ac8b5a; background-color: #d6ae71; color: white;}
 
-.pList5_2{width: 100%; height: 150px;}
-.pList5_2 button{width: 200px; height: 70px; background-color: white; border: 0px; font-size: 28px; font-weight: bold; margin-top: 20px;}
+.pList5_2{width: 100%; height: 100px;}
+.pList5_2 button{width: 200px; height: 70px; background-color: white; border: 0px; font-size: 28px; font-weight: bold; }
 .pList5_2 .btn:hover{border-bottom: darkgray; }
 .pList5_2 p{font-size: 22px; font-weight: bold;}
 
@@ -63,11 +63,10 @@
 .pList5_3 button{border: 1px solid lightgray; background-color: white; font-size: 18px; width: 200px; height: 50px; margin-top: 30px; border-radius: 5px;}
 .pList5_3 button:hover{border-color:#ac8b5a; background-color: #d6ae71; color: white;}
 #reviewList{width:100%; min-height:100%;}
+
 /*리뷰 입력 폼 스타일*/
 #reviewForm {width: 1000px; height:100%; border-collapse: collapse;}
-
 #reviewForm td{
-     
     border-bottom: 1px solid #ddd; padding: 5px;
     vertical-align:middle;
 }
