--- a/teaspoonProject/WebContent/resources/css/store/itemDetailView.css
+++ b/teaspoonProject/WebContent/resources/css/store/itemDetailView.css
@@ -32,20 +32,20 @@
 .p_explain5 button:hover{border-color:#ac8b5a; background-color: #d6ae71; color: white;}
 
 /* 제품상세버튼, 고객리뷰버튼 */
-.pList3{width: 800px; height: inherit; text-align: center; margin-left: 100px; margin-top: 50px; }
+.pList3{width: 800px; height: inherit; text-align: center;  margin-left: 100px; margin-top: 50px; }
 .pList3 p{width: 400px; height: 70px; float: left; background-color: white; border: 0px; font-size: 32px; font-weight: bold; }
 
 /* 상품상세페이지 */
 .pList4{float:left; width: 860px; height:400px; padding-left: 70px;padding-right: 70px;}
 
 /* 고객리뷰페이지(상단과 엥커걸림) */
-.pList5{ float:left; width: 1000px; }
+.pList5{ float:left; width: 1000px; height:520px}
 .pList5 p{font-size: 32px; font-weight: bold;}
-.pList5_1{ width: 100%; height: 150px;}
+.pList5_1{ width: 100%; height: 270px;}
 .pList5_1 button{border: 1px solid lightgray; background-color: white; font-size: 18px; width: 200px; height: 50px; margin-top: 30px; border-radius: 5px;}
 .pList5_1 button:hover{border-color:#ac8b5a; background-color: #d6ae71; color: white;}
 
-.pList5_2{width: 100%; height: 150px;}
+.pList5_2{width: 100%; height: 100px;}
 .pList5_2 button{width: 200px; height: 70px; background-color: white; border: 0px; font-size: 28px; font-weight: bold; margin-top: 20px;}
 .pList5_2 .btn:hover{border-bottom: darkgray; }
 .pList5_2 p{font-size: 22px; font-weight: bold;}
@@ -60,7 +60,6 @@
 /*리뷰 입력 폼 스타일*/
 #reviewForm {width: 1000px; height:100%; border-collapse: collapse;}
 #reviewForm td{
-    
     border-bottom: 1px solid #ddd; padding: 5px;
     vertical-align:middle;
 }
