--- a/teaspoonProject/WebContent/resources/css/store/coffeeDetailView.css
+++ b/teaspoonProject/WebContent/resources/css/store/coffeeDetailView.css
@@ -58,7 +58,8 @@
 
 .pList5_3{width:100%;}
 .pList5_3 table{font-size: 18px; margin-left:100px}
-.pList5_3 table *{border: 0.1px solid lightgray;}
+#createDate{text-align:center;}
+#user,#rcontent{text-align:left;}
 .pList5_3 p{font-size: 18px; font-weight: 500; text-align: justify;}
 .pList5_3 button{border: 1px solid lightgray; background-color: white; font-size: 18px; width: 200px; height: 50px; margin-top: 30px; border-radius: 5px;}
 .pList5_3 button:hover{border-color:#ac8b5a; background-color: #d6ae71; color: white;}
