--- a/teaspoonProject/WebContent/resources/css/mypage/mypage_enroll.css
+++ b/teaspoonProject/WebContent/resources/css/mypage/mypage_enroll.css
@@ -15,6 +15,7 @@ body, input, textarea, select, button, table1 {
     margin-top: 45px;
     margin-bottom: 45px;
     padding-left: 40px;
+    padding-right: 25px;
     align:center;
   }
     
@@ -201,25 +202,29 @@ li {
 
 /*input*/
 #userName{
-  margin-bottom: 30px;
-  width:400px;
+  margin-top:15px;
+  margin-bottom: 15px;
+  width:320px;
   height:55px;
 }
 
 #userId, #userPwd1, #userPwd2, #email{
-  width:400px;
+  width:320px;
   height:55px;
-  margin-bottom: 25px;
+  margin-top:12px;
+  margin-bottom: 12px;
   margin-right: 15px;
 }
 #birthday {
-  width:225px;
+  width:145px;
   height:60px;
-  margin-bottom: 10px;
+  margin-top:5px;
+  margin-bottom: 5px;
+  
 }
 
 #verification{
-  width:270px;
+  width:190px;
   height:55px;
 }
 
@@ -238,5 +243,17 @@ li {
   background: #000;
   color:white;
   border-radius: 5px;
+	
+}
+/*아이디 중복확인 버튼*/
+#idCheck{
+  width:150px;
+  height:50px;
+  margin-left:3px;
+  background: #808080;
+  color:white;
+  border-radius: 5px;
+  align:left;
+	
 	
 }
