--- a/teaspoonProject/WebContent/resources/css/board/about_teaspoon.css
+++ b/teaspoonProject/WebContent/resources/css/board/about_teaspoon.css
@@ -1,10 +1,15 @@
-.box{width:100%; height:900px; position:relative; top:0; color:#222;}
-#content1{position: relative; width: 100%; height: 100%;}
-#first{width:100%; height:900px; background:url("../../img/board/teaspoon_story_1.jpg") center top ;
+.box{width:100%; height:930px; position:relative; top:0; color:#222;}
+#content1{ width: 100%; height: 100%; }
+#first{width:100%; height:930px; background:url("../../img/board/teaspoon_story_1.jpg") center top ;
  background-size: 100% 100%; }
-#first>div{position: absolute;top:150px; width:100%; margin:0 auto; text-align: center; z-index: 100; color:#fff;border:1px solid red;} 
-#first .first_tt{font-size:40px; margin-top:70px}
-#first .content_text{font-size:18px; line-height: 28px; margin-top: 100px;}
-#second{width:100%; height:900px; background:url("../../img/board/teaspoon_story_2.jpg") center top ; background-size: 100% 100%; }
-#second>div{float:left; border:1px solid red; width:475px; height:100%; text-align:left;}
-#second .second_tt{font-size:40px; margin-top:70px; padding-top:60px; padding-left:20px}
+#first>div{width:100%; margin:0 auto; text-align: center; z-index: 100; color:#fff;} 
+#first .first_tt{ text-align:left; font-size:94px; padding-top:230px; margin-left:40px }
+#first .content_text{font-size:18px; line-height: 28px; margin-top: 100px; }
+#second{position:relative; width:100%; height:930px; background:url("../../img/board/teaspoon_story_2_1.jpg") center top;   }
+#second>div{float:left; width:100%; height:100%; text-align:left; }
+#second .second_tt{font-family: 'Abril Fatface', cursive; font-size:40px; margin-top:15%; padding:3% 3%;}
+#second .content_text .con{padding-left:3%}
+.photo{float:left; width:270px; height:300px; margin-top:16%;  margin-left:7.5%; }
+#third{background-color:#e2e2e2; width:100%; margin:auto;}
+#third ul{list-style:none; width:1200px; text-align:left; padding-top:36%; }
+#third ul li{font-size:15px}
