--- a/teaspoonProject/WebContent/resources/css/space/space_rental.css
+++ b/teaspoonProject/WebContent/resources/css/space/space_rental.css
@@ -149,7 +149,7 @@ img {vertical-align: middle;}
 }
   
 .btn:active {
-    background: #27ae60;
+    background: #c0c0c0;
     box-shadow: 0 1px 2px rgba(0,0,0, .2) inset;
 }
   
