--- a/teaspoonProject/WebContent/resources/css/main/main.css
+++ b/teaspoonProject/WebContent/resources/css/main/main.css
@@ -36,12 +36,12 @@
 .bestname {margin: 0 auto; padding-top: 50px;  padding-bottom: 10px; margin-bottom:30px;
            font-size: 20px; font-weight: 700; border-bottom: 3px solid #333; width:160px}
 #best_item{width:100%; height:427px;}           
-#best_item>.best_content{margin-left:40px;}
+#best_item>.best_content{margin-left:40px; }
 #best_item>.best_content>.best_num{position: relative;}
 #best_item>.best_content>.best_num>p{text-align:center;}
 #best_item>.best_content>.best_num>.num{position:absolute; top: 0px ; left:20px; font-size:40px; font-weight: 900; font-style: italic;}
 
-#best_item>div>a>img{width:250px; height:270px; }
+#best_item img{width:250px; height:270px; }
 #best_item>div{height:300px;float:left;}
 .best_product_name{text-align:center;}
 .best_product_price{text-align:center;}
