--- a/teaspoonProject/WebContent/resources/css/space/space_rental.css
+++ b/teaspoonProject/WebContent/resources/css/space/space_rental.css
@@ -196,9 +196,10 @@ img {vertical-align: middle;}
     right: 0;
     bottom: 0;
     left: 0;
-    width: 750px;
+    width: 690px;
     margin: auto;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     background: white;
     border-radius: 5px;
     padding: 1em 2em;
@@ -536,4 +537,13 @@ img {vertical-align: middle;}
   .texts {font-size: 11px}
 }
 
+.texts{
+	font-weight:bold;
+	color:skyblue;
+}
 
+.gfont{
+	color:lightgray;
+	font-size:14px;
+	font-weight:bold;
+}
