--- a/teaspoonProject/WebContent/resources/css/board/notice.css
+++ b/teaspoonProject/WebContent/resources/css/board/notice.css
@@ -5,4 +5,4 @@
 .listArea td{padding: 8px 0; border-bottom:1px solid #bebebe}
 .listArea thead th{border-bottom:2px solid #bebebe; border-top:1px solid #bebebe}
 .notice_tt{width:90%; font-size:35px; margin:auto; text-align:left; margin-bottom:5px}
-#btn{width:100px; height:50px; background:#9f9f9f;  font-weight:500; float:right ;border:1px solid #9f9f9f; margin-top:20px}
+#notice_btn{width:100px; height:50px; background:#9f9f9f;  font-weight:500; float:right ;border:1px solid #9f9f9f; margin-top:20px}
