--- a/teaspoonProject/WebContent/resources/css/board/event_view.css
+++ b/teaspoonProject/WebContent/resources/css/board/event_view.css
@@ -17,8 +17,7 @@
 #magazine .magazine_photo1{width:100%; height: 500px; background: #000;}
 #magazine .magazine_content1>p{line-height: 35px; margin:20px 0 50px 0;text-align: left; }
 
-.maga_con{float:left; display:block; width:100%; height:100%; }
+.maga_con{display:block; width:100%; height:100%; }
 /*이전 매거진 다음 매거진*/
 #pre_next{display:inline-block; width: 100%; height: 300px; }
 #pre_next #next, #pre{float:left; width: 500px; height: 100%;}
-
