--- a/teaspoonProject/WebContent/resources/css/board/event.css
+++ b/teaspoonProject/WebContent/resources/css/board/event.css
@@ -1,9 +1,9 @@
 .title{font-size:40px}
-#event{width:1200px; height:100%; padding-top:150px;}
+#event{width:1200px; height:100%; }
 #event .status{float:left;  height:140px; margin: 0 100px; list-style: none;}
 #event .status ul{width:1000px; padding: 50px 0px 50px 0px}
 #event .status>ul>li{float:left; list-style: none;  font-size: 25px; } 
-#event #event_content{width:1000px; height:2000px; margin: 0 100px;}
+#event #event_content{width:1000px; height:100%; margin: 0 100px;}
 #event #event_content ul li{width:100%; float:left; list-style: none; margin-bottom: 30px;}
 #event #event_content .img{position: relative; float:left; width:100%; height:300px; }
 #event #event_content .event_text{position: absolute; margin-top:90px; z-index:1; float:left; width:1000px;text-align: center; }
