--- a/teaspoonProject/WebContent/resources/css/main/main.css
+++ b/teaspoonProject/WebContent/resources/css/main/main.css
@@ -15,7 +15,7 @@
 /* PRODUCT */
 #content1{width:100%; height:830x; }
 .pname{margin: 0 auto; padding-top: 30px;  padding-bottom: 10px; margin-bottom:30px;
-    font-size: 20px; font-weight: 700; border-bottom: 3px solid #333; width:100px}
+    font-size: 20px; font-weight: 700; border-bottom: 3px solid #333; width:150px}
 #product_item{margin-left:160px; height: 730px;}
 #product_item_1>div{width:200px; height:auto; margin-left:15px; float:left; margin-bottom: 45px;}
 #product_item_1>div img{width:200px; height: 235px;}
@@ -25,10 +25,10 @@
 /* 맞춤추천, 공간대여 배너 */
 #content2{width:100%; height:300px;}
 #link>div{line-height: 3; height: 300px;float:left;}
-#link1{width:50%; background:#e4e4e4}
-#link2{width:50%;background-color: grey;}
-#btnLink1{background-color: lightgray;border: 1px solid black;width: 150px;height: 50px;}
-#btnLink2{background-color: gray;border: 1px solid black; width: 150px;height: 50px;}
+#link1{width:49.5%; border:1px solid #dbdbdb; border-right:none}
+#link2{width:49.5%; border:1px solid #dbdbdb;}
+#btnLink1{background-color: #fff;border: 1px solid #bebebe;width: 150px;height: 50px;}
+#btnLink2{background-color:#fff; border: 1px solid #bebebe; width: 150px;height: 50px;}
 
 /* best coffee */
 #content3{width:100%; height:550px;}
@@ -48,7 +48,7 @@
 /* coupon */
 #content4{width:100%; height:200px;}
 #coupon{
-    background-color: lightgrey;
+    border:1px solid #dbdbdb;
     text-align: center;
     line-height: inherit;
     font-size: 30px;
